Nova versão meu primeiro site.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section id="Sobre">
         <h2>Sobre mim</h2>
 
-        <img src="c:\Users\Usuario\OneDrive\Imagens\minha foto.jpeg">
+        <img src="c:\Users\Usuario\OneDrive\Imagens\minha foto.jpeg" alt="Imagem de foto de perfil">
 
         <article>
             <p> Olá! Eu sou a sharlisy, sou uma programadora.</p>
